--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
- 
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -2739,7 +2738,7 @@ textarea.form-control-lg {
   --bs-btn-border-color: transparent;
   --bs-btn-border-radius: 0.375rem;
   --bs-btn-hover-border-color: transparent;
-  --bs-btn-box-shadow: none;
+  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   --bs-btn-disabled-opacity: 0.65;
   --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
   display: inline-block;
@@ -2808,7 +2807,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #2b3492;
   --bs-btn-active-border-color: #293189;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #3641b7;
   --bs-btn-disabled-border-color: #3641b7;
@@ -2825,7 +2824,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #4e5a76;
   --bs-btn-active-border-color: #4a556e;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #627193;
   --bs-btn-disabled-border-color: #627193;
@@ -2842,7 +2841,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #146c43;
   --bs-btn-active-border-color: #13653f;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #198754;
   --bs-btn-disabled-border-color: #198754;
@@ -2859,7 +2858,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #3dd5f3;
   --bs-btn-active-border-color: #25cff2;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #0dcaf0;
   --bs-btn-disabled-border-color: #0dcaf0;
@@ -2876,7 +2875,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #fdc333;
   --bs-btn-active-border-color: #fdbc1a;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #FDB400;
   --bs-btn-disabled-border-color: #FDB400;
@@ -2893,7 +2892,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #ff788d;
   --bs-btn-active-border-color: #ff677e;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #ff5670;
   --bs-btn-disabled-border-color: #ff5670;
@@ -2910,7 +2909,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #c6c7c8;
   --bs-btn-active-border-color: #babbbc;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #f8f9fa;
   --bs-btn-disabled-border-color: #f8f9fa;
@@ -2927,7 +2926,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #343434;
   --bs-btn-active-border-color: #1a1a1a;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #010101;
   --bs-btn-disabled-border-color: #010101;
@@ -2943,7 +2942,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #3641b7;
   --bs-btn-active-border-color: #3641b7;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #3641b7;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #3641b7;
@@ -2960,7 +2959,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #627193;
   --bs-btn-active-border-color: #627193;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #627193;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #627193;
@@ -2977,7 +2976,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #198754;
   --bs-btn-active-border-color: #198754;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #198754;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #198754;
@@ -2994,7 +2993,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #0dcaf0;
   --bs-btn-active-border-color: #0dcaf0;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #0dcaf0;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #0dcaf0;
@@ -3011,7 +3010,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #FDB400;
   --bs-btn-active-border-color: #FDB400;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #FDB400;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #FDB400;
@@ -3028,7 +3027,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #ff5670;
   --bs-btn-active-border-color: #ff5670;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #ff5670;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #ff5670;
@@ -3045,7 +3044,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #f8f9fa;
   --bs-btn-active-border-color: #f8f9fa;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #f8f9fa;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #f8f9fa;
@@ -3062,7 +3061,7 @@ textarea.form-control-lg {
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #010101;
   --bs-btn-active-border-color: #010101;
-  --bs-btn-active-shadow: none;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #010101;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #010101;
@@ -10766,10 +10765,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.body {
-  font-family: "Inter", sans-serif;
-}
-
 .nav-link {
   color: #627193;
 }
@@ -10782,18 +10777,199 @@ h1, .h1 {
   font-size: 65px;
 }
 
-img {
-  vertical-align: middle;
+.card {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  margin: 15px;
+  background: #3641b7;
+  border-radius: 35px;
+  display: flex;
+  z-index: 1;
+  border: none;
+  overflow: hidden;
 }
 
-.btn:focus {
-  outline: none;
-  box-shadow: none;
+/* Right */
+.puzzleRL {
+  position: absolute;
+  width: 45px;
+  height: 20px;
+  background: white;
+  border-radius: 25px;
 }
 
-@media screen and (max-width: 992px) {
-  .bg {
+.r1 {
+  top: 15%;
+  left: 92%;
+}
+
+.r2 {
+  top: 30%;
+  left: 92%;
+}
+
+.r3 {
+  top: 45%;
+  left: 92%;
+}
+
+.r4 {
+  top: 60%;
+  left: 92%;
+}
+
+.r5 {
+  top: 75%;
+  left: 92%;
+}
+
+/* Left */
+.l1 {
+  top: 15%;
+  left: -8%;
+}
+
+.l2 {
+  top: 30%;
+  left: -8%;
+}
+
+.l3 {
+  top: 45%;
+  left: -8%;
+}
+
+.l4 {
+  top: 60%;
+  left: -8%;
+}
+
+.l5 {
+  top: 75%;
+  left: -8%;
+}
+
+.puzzleTB {
+  position: absolute;
+  width: 20px;
+  height: 45px;
+  background: white;
+  border-radius: 25px;
+}
+
+/* Top */
+.t1 {
+  left: 15%;
+  top: -8%;
+}
+
+.t2 {
+  left: 30%;
+  top: -8%;
+}
+
+.t3 {
+  left: 45%;
+  top: -8%;
+}
+
+.t4 {
+  left: 60%;
+  top: -8%;
+}
+
+.t5 {
+  left: 75%;
+  top: -8%;
+}
+
+/* Bottom */
+.b1 {
+  left: 15%;
+  top: 92%;
+}
+
+.b2 {
+  left: 30%;
+  top: 92%;
+}
+
+.b3 {
+  left: 45%;
+  top: 92%;
+}
+
+.b4 {
+  left: 60%;
+  top: 92%;
+}
+
+.b5 {
+  left: 75%;
+  top: 92%;
+}
+
+@media only screen and (max-width: 767px) {
+  .puzzle1R {
     display: none;
+  }
+  .puzzle1L {
+    display: none;
+  }
+  .puzzle2L {
+    display: none;
+  }
+  .puzzle2R {
+    display: none;
+  }
+  .puzzle3L {
+    display: none;
+  }
+  .puzzle3R {
+    display: none;
+  }
+  .puzzle4L {
+    display: none;
+  }
+  .puzzle4R {
+    display: none;
+  }
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .hero {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .puzzle1L {
+    display: none;
+  }
+  .puzzle2R {
+    display: none;
+  }
+  .puzzle2T {
+    display: none;
+  }
+  .puzzle3L {
+    display: none;
+  }
+  .puzzle3B {
+    display: none;
+  }
+  .puzzle4R {
+    display: none;
+  }
+  .bg {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .center {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
