--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,21 @@ $warning: #FDB400;
 $primary: #3641b7;
 
 @import "node_modules/bootstrap/scss/bootstrap";
+
+
+.playButton {
+ border-radius: 200px;
+ width: 40px;
+ height: 40px;
+ border: 6px solid #FDB400;
+ border-right: 6px solid white;
+ border-bottom: 6px solid white;
+ background-color: transparent;
+ margin-left: 15px;
+ padding: 20px;
+ -webkit-transform:rotate(-45deg);
+}
+
 .nav-link {
     color: #627193;
   }
@@ -18,6 +33,9 @@ h1 {
     font-size: 65px;
 }
 
+.profile {
+  width: 80px;
+}
 
 .card {
   position: relative;
@@ -152,6 +170,8 @@ h1 {
 
   .card {margin-left: auto; margin-right: auto};
   .hero {margin-left: auto; margin-right: auto};
+  .text {margin-left: auto; margin-right: auto; text-align: center};
+  .profile {margin-left: auto; margin-right: auto};
 }
 
 
@@ -170,6 +190,7 @@ h1 {
   .center {margin-left: auto; margin-right: auto};
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (max-width: 992px) {
+  .card {margin-left: auto; margin-right: auto;};
 
 }
