--- a/style.css
+++ b/style.css
@@ -10765,17 +10765,14 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.playButton {
+.playButton::after {
   border-radius: 200px;
-  width: 40px;
-  height: 40px;
   border: 6px solid #FDB400;
   border-right: 6px solid white;
   border-bottom: 6px solid white;
   background-color: transparent;
   margin-left: 15px;
-  padding: 20px;
-  -webkit-transform: rotate(-45deg);
+  padding: 15px;
 }
 
 .nav-link {
@@ -10969,8 +10966,13 @@ h1, .h1 {
     margin-left: auto;
     margin-right: auto;
   }
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 1399px) {
   .puzzle1L {
     display: none;
   }
@@ -10998,10 +11000,39 @@ h1, .h1 {
     margin-right: auto;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 992px) {
   .card {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .puzzle1B {
+    display: none;
+  }
+  .puzzle1L {
+    display: none;
+  }
+  .puzzle2T {
+    display: none;
+  }
+  .puzzle2B {
+    display: none;
+  }
+  .puzzle3T {
+    display: none;
+  }
+  .puzzle3B {
+    display: none;
+  }
+  .puzzle4T {
+    display: none;
+  }
+  .puzzle4R {
+    display: none;
+  }
+  .card {
+    justify-content: center;
   }
 }
 
