--- a/main.scss
+++ b/main.scss
@@ -8,13 +8,17 @@ $primary: #3641b7;
 @import "node_modules/bootstrap/scss/bootstrap";
 
 .playButton::after {
-  border-radius: 200px;
-  border: 6px solid #FDB400;
-  border-right: 6px solid white;
-  border-bottom: 6px solid white;
-  background-color: transparent;
-  margin-left: 15px;
-  padding: 15px;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -10px;
+  width: 100%;
+  height: 100%;
+  border: 0.25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border .75s linear infinite;
+  animation: spinner-border .75s linear infinite;
 }
 
 // .playButton {
