--- a/style.css
+++ b/style.css
@@ -10766,13 +10766,17 @@ textarea.form-control-lg {
   }
 }
 .playButton::after {
-  border-radius: 200px;
-  border: 6px solid #FDB400;
-  border-right: 6px solid white;
-  border-bottom: 6px solid white;
-  background-color: transparent;
-  margin-left: 15px;
-  padding: 15px;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -10px;
+  width: 100%;
+  height: 100%;
+  border: 0.25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border 0.75s linear infinite;
+  animation: spinner-border 0.75s linear infinite;
 }
 
 .nav-link {
