--- a/main.scss
+++ b/main.scss
@@ -7,29 +7,26 @@ $primary: #3641b7;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
-.playButton::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: -10px;
-  width: 100%;
-  height: 100%;
-  border: 0.25em solid currentColor;
-  border-right-color: transparent;
-  border-radius: 50%;
-  -webkit-animation: spinner-border .75s linear infinite;
-  animation: spinner-border .75s linear infinite;
+.bodyPlay {
+  width: 55px;
+  height: 55px;
+  position: relative;
 }
 
-// .playButton {
-//  border-radius: 200px;
-//  border: 6px solid #FDB400;
-//  border-right: 6px solid white;
-//  border-bottom: 6px solid white;
-//  background-color: transparent;
-//  margin-left: 15px;
-//  padding: 15px;
-// }
+.playBorder {
+position: absolute;
+top: -5%;
+bottom: 0;
+left: 0;
+right: 0;
+background-color: transparent;
+border-radius: 50%;
+border: 5px solid #FDB400;
+border-right: 5px solid white;
+border-bottom: 5px solid white;
+margin: 5px;
+-webkit-transform: rotate(-44deg);
+}
 
 .nav-link {
     color: #627193;
@@ -191,19 +188,14 @@ h1 {
   .puzzle1L{display:none};
 
   .puzzle2R{display:none};
-  .puzzle2T{display:none};
 
   .puzzle3L{display:none};
-  .puzzle3B{display:none};
 
   .puzzle4R{display:none};
   .bg {margin-left: auto; margin-right: auto};
   .center {margin-left: auto; margin-right: auto};
 }
 
-@media screen and (min-width: 992px) {
-  .card {margin-left: auto; margin-right: auto;};
-}
 
 @media screen and (min-width: 1400px) {
   .puzzle1B{display:none};
