--- a/style.css
+++ b/style.css
@@ -10765,18 +10765,25 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.playButton::after {
-  content: "";
+.bodyPlay {
+  width: 55px;
+  height: 55px;
+  position: relative;
+}
+
+.playBorder {
   position: absolute;
+  top: -5%;
+  bottom: 0;
   left: 0;
-  top: -10px;
-  width: 100%;
-  height: 100%;
-  border: 0.25em solid currentColor;
-  border-right-color: transparent;
+  right: 0;
+  background-color: transparent;
   border-radius: 50%;
-  -webkit-animation: spinner-border 0.75s linear infinite;
-  animation: spinner-border 0.75s linear infinite;
+  border: 5px solid #FDB400;
+  border-right: 5px solid white;
+  border-bottom: 5px solid white;
+  margin: 5px;
+  -webkit-transform: rotate(-44deg);
 }
 
 .nav-link {
@@ -10983,13 +10990,7 @@ h1, .h1 {
   .puzzle2R {
     display: none;
   }
-  .puzzle2T {
-    display: none;
-  }
   .puzzle3L {
-    display: none;
-  }
-  .puzzle3B {
     display: none;
   }
   .puzzle4R {
@@ -11000,12 +11001,6 @@ h1, .h1 {
     margin-right: auto;
   }
   .center {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media screen and (min-width: 992px) {
-  .card {
     margin-left: auto;
     margin-right: auto;
   }
